test/tests/stages/8_loops/invalid_parse/extra_for_header_clause.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[29]:
  int
  identifier(main)
  (
  void
  )
  {
  for
  (
  int
  identifier(i)
  =
  const int(0)
  ;
  identifier(i)
  <
  const int(10)
  ;
  identifier(i)
  =
  identifier(i)
  +
  const int(1)
  ;
  )
  ;
  return
  const int(0)
  ;
  }
